--- a/app/public/sass/_content.scss
+++ b/app/public/sass/_content.scss
@@ -44,3 +44,7 @@ md-content #heros .text {
 #dialog-content md-tab-content {
     overflow: hidden;
 }
+
+#dialog-content {
+    overflow:hidden;
+}
